# GeoAgent

./: .gitignore  .mcp.json  README.md  SETUP.md  TrabajoGrupal_VIIRS_Peru.ipynb  TrabajoGrupal_VIIRS_Peru_g4.ipynb  basecode.ipynb  conda-spec.txt  forest_tools.py  mcp_qgis_claude_skills.ipynb  municipality_tools.py  presentation_generator.py  pyproject.toml  qgis_mcp_server.py  run_analysis.py  task2_top100_fires_2024.html  test.ipynb
.claude/skills/: create-qgis-project.md  export-map.md  fire-analysis.md  geo-pipeline.md  spatial-query.md  validate-geojson.md
.codex/: config.toml
Assignments/Assignment1/: Ass1  Assignment1_Tarea1-5_grupo1.ipynb  Assignment1_Tarea1-5_grupo3.ipynb
Assignments/Assignment1/outputs_grupo3/: tarea2_top100_incendios_2024.html
Assignments/Assignment2/: Assignment2.md  Assignment2_GRUPO4  Assignment2_GRUPO_2.ipynb  Assignment2_Identifying_Rice_Areas_grupo3.ipynb
Assignments/Assignment2/Grupo1_Irma_Emilio_Diego/: Assignment2_compiled.ipynb  gee_node_runner.js
Lectures/: Lecture1.ipynb  Lecture1_Tutorial.ipynb  Lecture2_InteractiveMaps.ipynb  Lecture2_Tutorial.ipynb  Lecture3.ipynb  Lecture3_BigData.ipynb  Lecture4.js  Tutorial4_sanmartin  coordinates_1.csv  coordinates_2.csv  openstreetmap_example.html  peru_fires_2015.html  peru_fires_2015_all.html  temp.nc  tutorial4.ipynb
Lectures/_archive/: Lecture2.ipynb
Slides/: lecture2.tex
_archive/: Calendario_Oficial_Diplomatura_IA Generativa.docx  opensourcegeoagent.py  peru_viirs_fires.html  pyproject.toml  tools.py
_archive/examples/: example_1_agent_tools.py  example_3_alphaearth.py  example_4_mcp_demo.py
deepagents/: README.md
deepagents/clase1/: agente1_simple.ipynb  agente2_tools_simples.ipynb
deepagents/clase2/: agent.py  agente3_memoria.ipynb  peru_viirs_fires_2024.html  streamlit_app_basic.py  test.ipynb
deepagents/clase3/: agent.py
examples/: example_2_qgis_mcp.py
slides/: index.html  spatial_analysis_python.ipynb  spatial_analysis_slides.html  theme.css
small_example/: chatbot-demo.html  index.html  slides.html  slides.md
