[project]
name = "geoagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=5.5",
    "dotenv>=0.9.9",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "langchain[google-genai]>=1.0.5",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "requests>=2.32.5",
]
