[project]
name = "geoagent"
version = "0.2.0"
description = "Geospatial analysis agent with open source LLM support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=5.5",
    "dotenv>=0.9.9",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "langchain[google-genai]>=1.0.5",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "requests>=2.32.5",
    # New dependencies for OpenSourceGeoAgent
    "ollama>=0.4.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "deepagents>=0.6.3",
    "rich>=15.0.0",
    "tavily-python>=0.7.24",
    "streamlit>=1.57.0",
]

[project.optional-dependencies]
forest = [
    "rasterio>=1.3.0",
]
