[project]
name = "geoagent"
version = "0.2.0"
description = "Geospatial analysis agent with open source LLM support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # ── core data & notebook ──────────────────────────────────────────────
    "datetime>=5.5",
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "pathlib>=1.0.1",
    "requests>=2.32.5",
    "pandas>=2.3.3",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    # ── vector spatial (Session 1) ────────────────────────────────────────
    "geopandas>=1.1.1",
    "shapely>=2.0.0",
    # ── raster spatial (Session 1) ────────────────────────────────────────
    "rasterio>=1.3.0",
    "rioxarray>=0.15.0",
    "xarray>=2024.1.0",
    "netCDF4>=1.6.0",
    "affine>=2.4.0",
    "rasterstats>=0.19.0",
    "h5py>=3.9.0",
    # ── visualization (Sessions 1-2) ──────────────────────────────────────
    "folium>=0.20.0",
    "contextily>=1.5.0",
    "lonboard>=0.10.0",
    # ── modern raster (Session 2) ─────────────────────────────────────────
    "geowombat>=2.1.0",
    # ── spatial SQL & big geo data (Session 2) ────────────────────────────
    "duckdb>=1.1.0",
    "dask-geopandas>=0.3.0",
    "pyarrow>=15.0.0",
    # ── AI agent stack (Sessions 5-8) ────────────────────────────────────
    "ollama>=0.4.0",
    "langchain[google-genai]>=1.0.5",
    "deepagents>=0.6.3",
    "rich>=15.0.0",
    "tavily-python>=0.7.24",
    "streamlit>=1.57.0",
    "langchain-openai>=1.3.5",
]

[project.optional-dependencies]
forest = [
    "rasterio>=1.3.0",
]
